front page updated

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="Enter_username">Enter Username</string>
     <string name="enter_password">Enter Password</string>
     <string name="create_an_account">Create an account</string>
+    <string name="button">Button</string>
 
 </resources>
