Set up the sign up page and data base using firebase

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="enter_password">Enter Password</string>
     <string name="create_an_account">Create an account</string>
     <string name="button">Button</string>
+    <string name="log_in">Log in</string>
 
 </resources>
