--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Encrypta</string>
     <string name="encrypta">Encrypta</string>
     <string name="password">Password</string>
-    <string name="username">username</string>
+    <string name="username">Username</string>
     <string name="textview">TextView</string>
     <string name="Enter_username">Enter Username</string>
     <string name="enter_password">Enter Password</string>
@@ -13,11 +13,13 @@
     <string name="have_an_account">Have an account?</string>
     <string name="create_account_text">Create an Account</string>
     <string name="name_hint">Username</string>
-    <string name="email_hint">email</string>
+    <string name="email_hint">Email</string>
     <string name="password_hint">Password</string>
     <string name="re_enter_password_hint">Re-enter Password</string>
     <string name="register_hint">Register</string>
     <string name="sign_in">Sign in</string>
     <string name="forgot_password">Forgot password?</string>
+    <string name="sign_in_text">Sign in</string>
+    <string name="cancel">Cancel</string>
 
 </resources>
