--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,6 @@
     <string name="forgot_password">Forgot password?</string>
     <string name="sign_in_text">Sign in</string>
     <string name="cancel">Cancel</string>
+    <string name="sign_me_in">Sign me in</string>
 
 </resources>
