--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,8 @@
     <string name="sign_in_text">Sign in</string>
     <string name="cancel">Cancel</string>
     <string name="sign_me_in">Sign me in</string>
+    <string name="Submit">Submit</string>
+    <string name="email_verification_sent">Email verification sent</string>
+    <string name="verification_code">Verification code</string>
 
 </resources>
