--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,5 +28,9 @@
     <string name="reset_password">Reset Password</string>
     <string name="Continue">Continue</string>
     <string name="find_your_encrypta_account">Find your Encrypta account</string>
+    <string name="title_activity_tabs">TabsActivity</string>
+    <string name="tab_text_1">Tab 1</string>
+    <string name="tab_text_2">Tab 2</string>
+    <string name="title_activity_home">HomeActivity</string>
 
 </resources>
