Added the Find friends feature

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@
     <string name="tab_text_2">Tab 2</string>
     <string name="title_activity_home">HomeActivity</string>
     <string name="log_out">Log out</string>
-    <string name="all_users">All Users</string>
+    <string name="find_friends">Find Friends</string>
     <string name="account_settings">account_settings</string>
     <string name="account_setting">Account Settings</string>
 
@@ -52,5 +52,7 @@
     <string name="update_name">Update name</string>
     <string name="new_name">new name</string>
     <string name="confirm">confirm</string>
+    <string name="add_friends">Add a friend</string>
+    <string name="search_friends">search friends</string>
 
 </resources>
