--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,5 +54,8 @@
     <string name="confirm">confirm</string>
     <string name="add_friends">Add a friend</string>
     <string name="search_friends">search friends</string>
+    <string name="Response" >Respond to request</string>
+    <string name="Accept">Accept</string>
+    <string name="Delete">Delete</string>
 
 </resources>
