Added the following features and fixes:  if searching for someone that sent you a friend request you will be able to accept or decline in the search feature  added the accept functionality in the friend request adds the friend to your contact list  added a unfriend button  when you tap on a contact it takes you to a chat with them(not yet implemented)  fixed loading screen in friend request and contacts  updated the contact list to only show users that are friends and not all the users

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,8 +54,13 @@
     <string name="confirm">confirm</string>
     <string name="add_friends">Add a friend</string>
     <string name="search_friends">search friends</string>
-    <string name="Response" >Respond to request</string>
+    <string name="Response">Respond to request</string>
     <string name="Accept">Accept</string>
     <string name="Delete">Delete</string>
+    <string name="FriendList">FriendList</string>
+    <string name="Do_you_want_to_unfriend">Do you want to unfriend</string>
+    <string name="no_request_found">NO REQUEST FOUND</string>
+    <string name="no_contacts_found">NO CONTACTS FOUND</string>
+    <string name="title_activity_chat">ChatActivity</string>
 
 </resources>
