--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="create_account_text">Create an Account</string>
     <string name="name_hint">Username</string>
     <string name="email_hint">Email\\Username</string>
+    <string name="email_signup">Email</string>
     <string name="username_hint">Username</string>
     <string name="password_hint">Password</string>
     <string name="re_enter_password_hint">Re-enter Password</string>
